[package]
name = "worker-mq"
version = "0.1.0"
authors = ["bruno"]
edition = "2018"

[dependencies]
amiquip = "0.3"    
serde_json = "1.0"
serde = "1.0"
serde-big-array = "0.2.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.7.1"
rand = "0.6.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
openssl = "0.10.29"
num-traits = "0.2.6"
num-integer = "0.1.42"
num-bigint = { version = "0.2.6", features = ["serde"] }
dotenv = "0.15.0"