[package]
name = "worker-mq-wasm"
version = "0.1.0"
authors = ["bruno"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.6.5"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
uuid = { version="0.8", features = ["serde", "v4"] }
ring = "0.16.12"

wasm-bindgen = "0.2.60"